result

Run cpplint

./tema3.c:7:  Lines should be <= 120 characters long  [whitespace/line_length] [2]
./tema3.c:10:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:40:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:64:  Lines should be <= 120 characters long  [whitespace/line_length] [2]
./tema3.c:71:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:74:  Redundant blank line at the start of a code block should be deleted.  [whitespace/blank_line] [2]
./tema3.c:89:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:104:  Redundant blank line at the start of a code block should be deleted.  [whitespace/blank_line] [2]
./tema3.c:109:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:112:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
./tema3.c:112:  Redundant blank line at the start of a code block should be deleted.  [whitespace/blank_line] [2]
./tema3.c:145:  Line ends in whitespace.  Consider deleting these extra spaces.  [whitespace/end_of_line] [4]
Done processing ./bmp_header.h
Done processing ./tema3.c
Total errors found: 12

Run clang-tidy-12

26 warnings generated.
/home/student/Desktop/Tema3---PC/tema3.c:8:9: error: variable 'i' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, padding;
        ^
          = 0
/home/student/Desktop/Tema3---PC/tema3.c:8:12: error: variable 'padding' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, padding;
           ^
                   = 0
/home/student/Desktop/Tema3---PC/tema3.c:38:9: error: variable 'i' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, padding;
        ^
          = 0
/home/student/Desktop/Tema3---PC/tema3.c:38:12: error: variable 'padding' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, padding;
           ^
                   = 0
/home/student/Desktop/Tema3---PC/tema3.c:67:17: error: variable 'localBmpPixelMatrix' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    bmp_pixel **localBmpPixelMatrix;
                ^
                                    = NULL
/home/student/Desktop/Tema3---PC/tema3.c:68:9: error: variable 'i' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, j;
        ^
          = 0
/home/student/Desktop/Tema3---PC/tema3.c:68:12: error: variable 'j' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    int i, j;
           ^
             = 0
/home/student/Desktop/Tema3---PC/tema3.c:96:17: error: variable 'bmpPixelMatrix' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    bmp_pixel **bmpPixelMatrix;
                ^
                               = NULL
/home/student/Desktop/Tema3---PC/tema3.c:99:18: error: variable 'x' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    unsigned int x, y, i;
                 ^
                   = 0
/home/student/Desktop/Tema3---PC/tema3.c:99:21: error: variable 'y' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    unsigned int x, y, i;
                    ^
                      = 0
/home/student/Desktop/Tema3---PC/tema3.c:99:24: error: variable 'i' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
    unsigned int x, y, i;
                       ^
                         = 0
/home/student/Desktop/Tema3---PC/tema3.c:128:75: error: narrowing conversion from 'unsigned int' to signed type 'int' is implementation-defined [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
            insert(&bmpFileHeader, &bmpInfoHeader, &bmpPixelMatrix, path, x, y);
                                                                          ^
/home/student/Desktop/Tema3---PC/tema3.c:128:78: error: narrowing conversion from 'unsigned int' to signed type 'int' is implementation-defined [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
            insert(&bmpFileHeader, &bmpInfoHeader, &bmpPixelMatrix, path, x, y);
                                                                             ^
Suppressed 13 warnings (13 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
13 warnings treated as errors
